[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telnetlib3"
version = "2.6.0"
description = " Python Telnet server and client CLI and Protocol library"
readme = "README.rst"
license = "ISC"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Jeff Quast", email = "contact@jeffquast.com"},
]
keywords = [
    "telnet",
    "server",
    "client",
    "bbs",
    "mud",
    "utf8",
    "cp437",
    "api",
    "library",
    "asyncio",
    "pty",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Shells",
    "Topic :: Terminals :: Telnet",
]
requires-python = ">=3.9"
dependencies = [
    "wcwidth>=0.2.13",
]

[project.optional-dependencies]
docs = [
    "Sphinx>3",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
]
with_tui = [
    "ucs-detect>=2",
    "prettytable",
    "prompt_toolkit>=3",
    "textual>=0.44",
]

[project.scripts]
telnetlib3-server = "telnetlib3.server:main"
telnetlib3-client = "telnetlib3.client:main"
telnetlib3-fingerprint-server = "telnetlib3.fingerprinting:fingerprint_server_main"
telnetlib3-fingerprint = "telnetlib3.client:fingerprint_main"

[project.urls]
Homepage = "https://github.com/jquast/telnetlib3"
Documentation = "https://telnetlib3.readthedocs.io"
Repository = "https://github.com/jquast/telnetlib3"
Issues = "https://github.com/jquast/telnetlib3/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/telnetlib3/**",
    "/docs/**",
    "/README.rst",
    "/CONTRIBUTING.rst",
    "/LICENSE",
    "/tox.ini",
    "/requirements*.txt",
    "/.gitignore",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["telnetlib3"]

[tool.pylint.main]
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.mccabe",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.redefined_variable_type",
]
persistent = false
jobs = 0

[tool.pylint."messages control"]
enable = ["all"]
disable = [
    "fixme",
    "locally-disabled",
    "suppressed-message",
    "wrong-import-order",
    "wrong-import-position",
    "use-implicit-booleaness-not-comparison-to-zero",
    # telnetlib3 specific
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-few-public-methods",
    "too-many-arguments",
    # intentional re-exports in telnetlib.py and telopt.py
    "duplicate-code",
    # my deepest apologies to downstream developers who are also type-lovers, our 'writer' can be
    # *either*  TelnetWriter or TelnetUnicodeWriter, depending on the arguments passed, designed
    # several years before python first provided Typing, the API can't be changed this late!
    "union-attr",
]

[tool.pylint.format]
max-line-length = 100
good-names = ["fd", "_", "x", "y", "tn", "ip"]

[tool.pylint.design]
max-args = 18
max-attributes = 22
max-branches = 22
max-complexity = 22
max-locals = 30
max-module-lines = 3000
max-parents = 10
max-positional-arguments = 8
max-public-methods = 45
max-returns = 12
max-statements = 90

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 8

[tool.pylint.reports]
reports = false
msg-template = "{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}"

[tool.mypy]
python_version = "3.9"
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["telnetlib3.tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["telnetlib3.telnetlib"]
ignore_errors = true

[tool.black]
line-length = 100
skip-magic-trailing-comma = true
target-version = ["py39", "py310", "py311", "py312", "py313"]
