[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telnetlib3"
version = "3.0.0"
description = " Python Telnet server and client CLI and Protocol library"
readme = "README.rst"
license = "ISC"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Jeff Quast", email = "contact@jeffquast.com"},
]
keywords = [
    "telnet",
    "server",
    "client",
    "bbs",
    "mud",
    "utf8",
    "cp437",
    "api",
    "library",
    "asyncio",
    "pty",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: System :: Shells",
    "Topic :: Terminals :: Telnet",
]
requires-python = ">=3.9"
dependencies = [
    "wcwidth>=0.2.13",
]

[project.optional-dependencies]
docs = [
    "Sphinx>3",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "myst-parser",
]
with_tui = [
    "blessed>=1.31",
    "ucs-detect>=2,<3",
    "prettytable",
    "textual>=0.44",
]

[project.scripts]
telnetlib3-server = "telnetlib3.server:main"
telnetlib3-client = "telnetlib3.client:main"
telnetlib3-fingerprint-server = "telnetlib3.fingerprinting:fingerprint_server_main"
telnetlib3-fingerprint = "telnetlib3.client:fingerprint_main"

[project.urls]
Homepage = "https://github.com/jquast/telnetlib3"
Documentation = "https://telnetlib3.readthedocs.io"
Repository = "https://github.com/jquast/telnetlib3"
Issues = "https://github.com/jquast/telnetlib3/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/telnetlib3/**",
    "/docs/**",
    "/README.rst",
    "/CONTRIBUTING.rst",
    "/LICENSE",
    "/tox.ini",
    "/requirements*.txt",
    "/.gitignore",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["telnetlib3"]
artifacts = ["telnetlib3/help/*.md"]

[tool.pylint.main]
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.mccabe",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.redefined_variable_type",
]
persistent = false
jobs = 0

[tool.pylint."messages control"]
enable = ["all"]
disable = [
    "fixme",
    "locally-disabled",
    "suppressed-message",
    "wrong-import-order",
    "wrong-import-position",
    "use-implicit-booleaness-not-comparison-to-zero",
    # telnetlib3 specific
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-many-return-statements",
    "too-many-lines",
    "too-complex",
    # intentional re-exports in telnetlib.py and telopt.py
    "duplicate-code",
    # cyclic-import is a graph-level diagnostic that cannot be suppressed inline
    "cyclic-import",
    # deliberate deferred imports throughout the codebase
    "import-outside-toplevel",
    # internal APIs, common pattern across protocol code
    "protected-access",
    # boundary/cleanup code throughout
    "broad-exception-caught",
    "broad-except",
    # callback signatures with unused params
    "unused-argument",
    # codec encode/decode `input` param, __exit__ `type` param
    "redefined-builtin",
    # module-level singletons pattern
    "global-statement",
    # theNULL, PTY_SUPPORT, SLC_nosupport, _editor_active, etc.
    "invalid-name",
    # subprocess re-imports after fork
    "reimported",
    "redefined-outer-name",
    # deliberate override renames/changes
    "arguments-renamed",
    "arguments-differ",
    # optional deps may not be installed (blessed, textual)
    "import-error",
    # pylint false-positive family
    "overlapping-except",
    "redefined-variable-type",
    "unsupported-assignment-operation",
    "use-implicit-booleaness-not-comparison-to-string",
    "ungrouped-imports",
    "consider-using-with",
    "consider-using-from-import",
]

[tool.pylint.format]
max-line-length = 100
good-names = ["fd", "_", "x", "y", "tn", "ip"]

[tool.pylint.design]
max-args = 18
max-attributes = 22
max-branches = 22
max-complexity = 22
max-locals = 30
max-module-lines = 3000
max-parents = 10
max-positional-arguments = 8
max-public-methods = 45
max-returns = 12
max-statements = 90

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 8

[tool.pylint.reports]
reports = false
msg-template = "{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}"

[tool.mypy]
python_version = "3.9"
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = ["telnetlib3.tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["telnetlib3.telnetlib"]
ignore_errors = true

[tool.black]
line-length = 100
skip-magic-trailing-comma = true
target-version = ["py39", "py310", "py311", "py312", "py313"]
